# lesson_5

./: CMakeLists.txt  IStatistics.h  Max_statistics.cpp  Max_statistics.h  Mean_statistics.cpp  Mean_statistics.h  Min_statistics.cpp  Min_statistics.h  Pct_statistics.cpp  Pct_statistics.h  Perfromance_testing.cpp  Perfromance_testing.h  README.md  Std_statistics.cpp  Std_statistics.h  Testing.cpp  Testing.h  Util.cpp  Util.h  benchmark.txt  main.cpp  test_statistics.cpp
.github/workflows/: main.yml
testing/: CMakeLists.txt  test_statistics.cpp
